RESOLVED FIXED 56614
3 <select> bidi tests failing on Windows 7 Release (WebKit2 Tests)
https://bugs.webkit.org/show_bug.cgi?id=56614
Summary 3 <select> bidi tests failing on Windows 7 Release (WebKit2 Tests)
Adam Roben (:aroben)
Reported 2011-03-17 17:20:28 PDT
These tests are failing on Windows 7 Release (WebKit2 Tests) due to bidi differences: fast/forms/select-writing-direction-natural.html fast/text/international/bidi-menulist.html fast/text/international/pop-up-button-text-alignment-and-direction.html So are these, and I suspect it's due to the same issue as the above: svg/W3C-I18N/text-dirLTR-ubOverride.svg svg/W3C-I18N/tspan-dirLTR-ubOverride-in-default-context.svg svg/W3C-I18N/tspan-dirLTR-ubOverride-in-ltr-context.svg svg/W3C-I18N/tspan-dirNone-ubOverride-in-default-context.svg svg/W3C-I18N/tspan-dirNone-ubOverride-in-ltr-context.svg svg/text/bidi-text-query.svg Here's an example (with many other failures): http://build.webkit.org/results/Windows%207%20Release%20(WebKit2%20Tests)/r81410%20(4248)/results.html
Attachments
Adam Roben (:aroben)
Comment 1 2011-03-17 17:40:10 PDT
Dan determined that the SVG failures are due to some other bug. I'll file a new bug for them.
Adam Roben (:aroben)
Comment 2 2011-03-17 17:51:06 PDT
The SVG bug is bug 56617.
Adam Roben (:aroben)
Comment 3 2011-03-17 17:54:34 PDT
Fixed in r81419. (Thanks, Dan!)
Adam Roben (:aroben)
Comment 4 2011-03-17 17:54:44 PDT
...and so I should close the bug.
Note You need to log in before you can comment on or make changes to this bug.