Make bidi text in <select> menus in WebKit2 on Windows match WebKit1

Fixes <http://webkit.org/b/56614> 3 <select> bidi tests failing on Windows 7 Release
(WebKit2 Tests)

Reviewed by Sam Weinig.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::selectItemWritingDirectionIsNatural):
(WebKit::WebChromeClient::selectItemAlignmentFollowsMenuWritingDirection):
On Windows, return the same values we return in WebKit1.

Canonical link: https://commits.webkit.org/71291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81419 268f45cc-cd09-0410-ab3c-d52691b4dbfc